KVH/mykvh/Email-to-anything/objects/Pattern_Based_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Action_Type__c</fullName>
        <label>Action Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_if_No_Match_Go_To_Service__c</fullName>
        <label>Action if No Match Go To Service</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Append_Picklist_Values__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Append Picklist Values</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Append_Values__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Append Values</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apply_Empty_Result__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply Empty Result</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assign_To_Owner_Queue__c</fullName>
        <label>Assign To Owner Queue</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assign_To_Owner_Type__c</fullName>
        <label>Assign To Owner Type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assign_To_Owner_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assign To Owner User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pattern_Based_Rule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capture_Group__c</fullName>
        <label>Capture Group</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Literal__c</fullName>
        <label>Date Literal</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination_Field__c</fullName>
        <label>Destination Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination_Value_Field__c</fullName>
        <label>Destination Value Field</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Force_to_Unmatched_Queue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Force to Unmatched Queue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lookup_Object_Field__c</fullName>
        <label>Lookup Object Field</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lookup_Object__c</fullName>
        <label>Lookup Object</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lookup_Order__c</fullName>
        <label>Lookup Order</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Earliest Created</fullName>
                </value>
                <value>
                    <fullName>Latest Created</fullName>
                </value>
                <value>
                    <fullName>Latest Modified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overwrite_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overwrite Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overwrite_Non_Blank_Values__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overwrite Non Blank Values</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Id__c</fullName>
        <label>Parent Id</label>
        <referenceTo>Email_Services_Function__c</referenceTo>
        <relationshipLabel>Pattern Based Rules</relationshipLabel>
        <relationshipName>Pattern_Based_Rules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pattern__c</fullName>
        <label>Pattern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule_Type__c</fullName>
        <label>Rule Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Field Assignment</fullName>
                </value>
                <value>
                    <fullName>Lookup Assignment</fullName>
                </value>
                <value>
                    <fullName>Owner Assignment</fullName>
                </value>
                <value>
                    <fullName>Fixed Value Lookup Assignment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Search_In__c</fullName>
        <label>Search In</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Subject</fullName>
                </value>
                <value>
                    <fullName>Body</fullName>
                </value>
                <value>
                    <fullName>Headers</fullName>
                </value>
                <value>
                    <fullName>To</fullName>
                </value>
                <value>
                    <fullName>From</fullName>
                </value>
                <value>
                    <fullName>CC</fullName>
                </value>
                <value>
                    <fullName>Attachment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Separator__c</fullName>
        <label>Separator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stop_On_Match__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stop On Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Offset__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Time Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Minutes</fullName>
                </value>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trigger_On__c</fullName>
        <label>Trigger On</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trigger_Pattern__c</fullName>
        <label>Trigger Pattern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trigger_Search_In__c</fullName>
        <label>Trigger Search In</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Subject</fullName>
                </value>
                <value>
                    <fullName>Body</fullName>
                </value>
                <value>
                    <fullName>Headers</fullName>
                </value>
                <value>
                    <fullName>To</fullName>
                </value>
                <value>
                    <fullName>From</fullName>
                </value>
                <value>
                    <fullName>CC</fullName>
                </value>
                <value>
                    <fullName>Attachment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trigger_Type__c</fullName>
        <label>Trigger Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trigger_When__c</fullName>
        <label>Trigger When</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pattern Matched</fullName>
                </value>
                <value>
                    <fullName>Pattern Not Matched</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unmatched_Queue__c</fullName>
        <label>Unmatched Queue</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Pattern Based Rule</label>
    <nameField>
        <label>Pattern Based Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pattern Based Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>